Fix Program text alignment to align under previous program names

--- a/style.css
+++ b/style.css
@@ -119,17 +119,19 @@ a:hover { opacity: .85; }
 
 /* Ensure multi-line content aligns properly */
 .meta li {
-    display: flex;
-    align-items: flex-start;
+    display: block;
 }
 
 .meta li .label {
-    flex-shrink: 0;
-    margin-right: 0.5rem;
+    display: inline-block;
+    width: 7rem;
+    vertical-align: top;
 }
 
 .meta li > *:not(.label) {
-    flex: 1;
+    display: inline-block;
+    width: calc(100% - 7.5rem);
+    vertical-align: top;
 }
 
 /* ------------------------------------
